--- a/Main.ipynb
+++ b/Main.ipynb
@@ -15,7 +15,9 @@
    "source": [
     "import numpy as np\n",
     "import xarray as xr\n",
-    "from importlib import reload"
+    "from importlib import reload\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -37,148 +39,115 @@
       "# ==================================== #\n",
       "# Initializing variancedecomp class    #\n",
       "# ==================================== #\n",
-      "- Reading variable lists\n",
+      "- Reading variable list\n",
       "- Reading metadata\n",
       "- Reading AR6 data\n",
-      "     Saving counts of variables in total database (for reference later)\n",
-      "     Now actual reading of data, and applying various filters to the database\n",
-      "     Merge model versions\n",
-      "     Add Primary Energy|Wind+Solar\n"
+      "- Count variables in total database\n",
+      "- Applying various filters and preprocessing to the database\n",
+      "- Merge model versions and combine with scenario names\n",
+      "- Generate aggregated variables\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "x:\\user\\dekkerm\\Projects\\AR6_Variance\\variancedecomposition\\ClassVarianceDecomp.py:204: FutureWarning:\n",
-      "\n",
-      "The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "\n",
-      "x:\\user\\dekkerm\\Projects\\AR6_Variance\\variancedecomposition\\ClassVarianceDecomp.py:206: FutureWarning:\n",
-      "\n",
-      "The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "\n"
+      "100%|██████████| 1200/1200 [00:09<00:00, 131.38it/s]\n",
+      "100%|██████████| 1200/1200 [00:05<00:00, 213.75it/s]\n",
+      "100%|██████████| 1200/1200 [00:08<00:00, 143.49it/s]\n",
+      "100%|██████████| 1200/1200 [00:10<00:00, 111.31it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Convert time dimension and Xarray\n",
-      "     Temporal interpolation\n",
-      "- Applying sampled decomposition\n"
+      "- Add fractional variables\n",
+      "- Convert time dimension and xarray\n",
+      "- Temporal interpolation\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 53/53 [1:37:55<00:00, 110.85s/it]"
+      "x:\\user\\dekkerm\\environments\\MyEnv\\lib\\site-packages\\xarray\\core\\missing.py:264: FutureWarning: is_monotonic is deprecated and will be removed in a future version. Use is_monotonic_increasing instead.\n",
+      "  if not index.is_monotonic:\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Done!\n"
+      "- Count models and c-outcomes\n",
+      "- Filter out scenarios with C8 and models with small entry numbers\n",
+      "- Generate samples and apply decomposition\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "100%|██████████| 138/138 [13:47:24<00:00, 359.74s/it]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Save stuff\n"
      ]
     }
    ],
    "source": [
-    "import ClassVarianceDecomp\n",
-    "reload(ClassVarianceDecomp)\n",
-    "from ClassVarianceDecomp import variancedecomp\n",
-    "vardec = variancedecomp()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Plot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import Plotfunctions\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "reload(Plotfunctions)\n",
-    "from Plotfunctions import rescale_size, triangleplot, tableplot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    XR.close()\n",
-    "except:\n",
-    "    3\n",
-    "XR = xr.open_dataset(\"X:/user/dekkerm/Projects/AR6_Variance/variancedecomposition/Data/Variances.nc\")\n",
-    "DF = pd.read_csv(\"X:/user/dekkerm/Projects/AR6_Variance/Data/Models.csv\")\n",
-    "Varlist = pd.read_excel(\"X:/user/dekkerm/Projects/AR6_Variance/variancedecomposition/Data/Varlist.xlsx\", sheet_name = \"Data\")\n",
-    "vars = np.array(Varlist[\"Variable\"])\n",
-    "cats = np.array(Varlist[\"Category\"])\n",
-    "Names = np.unique(cats)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "figs = []\n",
-    "lens = []\n",
-    "for c in Names:\n",
-    "    xrsub = XR.sel(Variable = vars[cats==c])\n",
-    "    figs.append(triangleplot(xrsub))\n",
-    "    lens.append(DF[c][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    os.remove('Figures/VariancePlots.html')\n",
-    "except:\n",
-    "    3\n",
-    "def html_w(typ):\n",
-    "    return '<html> '+typ+' <p style=\"font-family: Arial\">'\n",
+    "import ClassVarianceDecomp_v2\n",
+    "reload(ClassVarianceDecomp_v2)\n",
+    "from ClassVarianceDecomp_v2 import variancedecomp\n",
     "\n",
-    "with open('Figures/VariancePlots.html', 'a') as f:\n",
-    "    f.write(html_w('<h1>')+'First order Variance decomposition</p></h1>')\n",
-    "    f.write(html_w('<body>')+'The left-bottom angle points towards the total variance minus the variance captured by the other two angles together (which is not necessarily equal to the sum). </p></body>')\n",
-    "\n",
-    "    for n_i in range(len(Names)):\n",
-    "        if n_i > 0:\n",
-    "            f.write('<hr>')\n",
-    "        f.write(html_w('<h1>')+'Fig. '+str(n_i+1)+' - '+Names[n_i]+' ('+str(lens[n_i])+' entries)'+'</p></h1>')\n",
-    "        f.write(figs[n_i].to_html(full_html=False, include_plotlyjs='cdn'))"
+    "decomp = variancedecomp()\n",
+    "decomp.read_variable_list()\n",
+    "decomp.read_metadata()\n",
+    "decomp.read_ar6()\n",
+    "decomp.count_variables()\n",
+    "decomp.filters_and_preprocessing()\n",
+    "decomp.merge_model_versions_and_scenarios()\n",
+    "decomp.generate_aggregated_variables()\n",
+    "decomp.add_fractional_variables()\n",
+    "decomp.conversion_to_xarray()\n",
+    "decomp.temporal_interpolation()\n",
+    "decomp.count_models_and_climate_outcomes()\n",
+    "decomp.filters()\n",
+    "#decomp.sampling_and_decomposing()\n",
+    "#decomp.savings()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "7it [10:20, 88.63s/it] \n"
+     ]
+    }
+   ],
    "source": [
-    "## Plot table"
+    "# SENSITIVITY ANALYSIS\n",
+    "# Redefine parameters\n",
+    "decomp.var_all = ['Secondary Energy|Electricity|Solar']\n",
+    "resampling = 100\n",
+    "decomp.resampling = 1 # HIER 1 VAN MAKEN????\n",
+    "list_samplesize = [3, 10, 30, 100, 300, 1000, 3000]#np.arange(5, 100, 5)\n",
+    "mat = np.zeros(shape=(len(list_samplesize), resampling))\n",
+    "\n",
+    "for s_i, s in tqdm(enumerate(list_samplesize)):\n",
+    "    decomp.sample_size_per_ms = s\n",
+    "    for r_i in range(resampling):\n",
+    "        decomp.sampling_and_decomposing(printy='off')\n",
+    "        mat[s_i, r_i] = float(decomp.XRvar.sel(Variable='Secondary Energy|Electricity|Solar', Time=2050).S_m+0.5*decomp.XRvar.sel(Variable='Secondary Energy|Electricity|Solar', Time=2050).S_mc)"
    ]
   },
   {
@@ -187,52 +156,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.graph_objects as go\n",
-    "from plotly.colors import n_colors\n",
-    "import plotly.express as px"
+    "np.save(\"X:/user/dekkerm/Projects/AR6_Variance/variancedecomposition/Data/Sensitivity/Mat.npy\", mat)\n",
+    "np.save(\"X:/user/dekkerm/Projects/AR6_Variance/variancedecomposition/Data/Sensitivity/L_samplesize.npy\", list_samplesize)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "figs2 = []\n",
-    "for t in [2050, 2100]:\n",
-    "    for srt in [2, 1]:\n",
-    "        figs2.append(tableplot(XR, t, srt))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 176,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    os.remove('Figures/Table.html')\n",
-    "except:\n",
-    "    3\n",
-    "def html_w(typ):\n",
-    "    return '<html> '+typ+' <p style=\"font-family: Arial\">'\n",
-    "\n",
-    "with open('Figures/Table.html', 'a') as f:\n",
-    "    f.write(html_w('<h1>')+'First order Variance decomposition</p></h1>')\n",
-    "    f.write(html_w('<body>')+'Using various years and sorting. These indices are normalized up to the total, which means they add up to 1 here. The non-normalized versions do not, as they represent first-order variance explanation only.</p></body>')\n",
-    "    \n",
-    "    f.write(html_w('<h1>')+'For 2050, sorted by climate'+'</p></h1>')\n",
-    "    f.write(figs2[0].to_html(full_html=False, include_plotlyjs='cdn'))\n",
-    "    f.write('<hr>')\n",
-    "    f.write(html_w('<h1>')+'For 2050, sorted by model'+'</p></h1>')\n",
-    "    f.write(figs2[1].to_html(full_html=False, include_plotlyjs='cdn'))\n",
-    "    f.write('<hr>')\n",
-    "    f.write(html_w('<h1>')+'For 2100, sorted by climate'+'</p></h1>')\n",
-    "    f.write(figs2[2].to_html(full_html=False, include_plotlyjs='cdn'))\n",
-    "    f.write('<hr>')\n",
-    "    f.write(html_w('<h1>')+'For 2100, sorted by model'+'</p></h1>')\n",
-    "    f.write(figs2[3].to_html(full_html=False, include_plotlyjs='cdn'))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -254,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.11"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
