Restructuring of files

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -122,6 +122,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sensitivity analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -139,7 +146,7 @@
     "# Redefine parameters\n",
     "decomp.var_all = ['Secondary Energy|Electricity|Solar']\n",
     "resampling = 100\n",
-    "decomp.resampling = 1 # HIER 1 VAN MAKEN????\n",
+    "decomp.resampling = 1\n",
     "list_samplesize = [3, 10, 30, 100, 300, 1000, 3000]#np.arange(5, 100, 5)\n",
     "mat = np.zeros(shape=(len(list_samplesize), resampling))\n",
     "\n",
@@ -151,21 +158,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save files if preferred"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save(\"X:/user/dekkerm/Projects/AR6_Variance/variancedecomposition/Data/Sensitivity/Mat.npy\", mat)\n",
-    "np.save(\"X:/user/dekkerm/Projects/AR6_Variance/variancedecomposition/Data/Sensitivity/L_samplesize.npy\", list_samplesize)"
+    "# np.save(\"/Data/Sensitivity/Mat.npy\", mat)\n",
+    "# np.save(\"/Data/Sensitivity/L_samplesize.npy\", list_samplesize)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
