--- a/Plotting scripts/Figure_1.ipynb
+++ b/Plotting scripts/Figure_1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -14585,7 +14585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14595,19 +14595,19 @@
     "    else:\n",
     "        sub = ''\n",
     "    try:\n",
-    "        os.remove('Figures/Paperfigures/Figure_1'+sub+'.html')\n",
+    "        os.remove('../Figures/Paperfigures/Figure_1'+sub+'.html')\n",
     "    except:\n",
     "        3\n",
     "    def html_w(typ):\n",
     "        return '<html> '+typ+' <p style=\"font-family: Arial\">'\n",
     "\n",
-    "    fig.write_image(\"Figures/Paperfigures/Figure_1\"+sub+\".pdf\")\n",
-    "    fig.write_image(\"Figures/Paperfigures/Figure_1\"+sub+\".png\", scale=3)\n",
-    "    fig.write_image(\"Figures/Paperfigures/Figure_1\"+sub+\".svg\")\n",
+    "    fig.write_image(\"../Figures/Paperfigures/Figure_1\"+sub+\".pdf\")\n",
+    "    fig.write_image(\"../Figures/Paperfigures/Figure_1\"+sub+\".png\", scale=3)\n",
+    "    fig.write_image(\"../Figures/Paperfigures/Figure_1\"+sub+\".svg\")\n",
     "    today = date.today()\n",
     "    td = today.strftime(\"%B %d, %Y\")\n",
     "\n",
-    "    with open('Figures/Paperfigures/Figure_1'+sub+'.html', 'a') as f:\n",
+    "    with open('../Figures/Paperfigures/Figure_1'+sub+'.html', 'a') as f:\n",
     "        f.write(html_w('<h1>')+'Figure 1 - Electricity Generation</p></h1>')\n",
     "        f.write(html_w('<body>')+'Version: '+td+'</p></body>')\n",
     "        f.write(fig.to_html(full_html=False, include_plotlyjs='cdn'))"
