Restructure of all calculation code

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -24,12 +24,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run class or read xarray file"
+    "## Run data handling code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -37,12 +37,11 @@
      "output_type": "stream",
      "text": [
       "# ==================================== #\n",
-      "# Initializing variancedecomp class    #\n",
+      "# Initializing data_handling class     #\n",
       "# ==================================== #\n",
       "- Reading variable list\n",
       "- Reading metadata\n",
       "- Reading AR6 data\n",
-      "- Count variables in total database\n",
       "- Applying various filters and preprocessing to the database\n",
       "- Merge model versions and combine with scenario names\n",
       "- Generate aggregated variables\n"
@@ -52,10 +51,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1200/1200 [00:09<00:00, 131.38it/s]\n",
-      "100%|██████████| 1200/1200 [00:05<00:00, 213.75it/s]\n",
-      "100%|██████████| 1200/1200 [00:08<00:00, 143.49it/s]\n",
-      "100%|██████████| 1200/1200 [00:10<00:00, 111.31it/s]\n"
+      "100%|██████████| 1200/1200 [00:09<00:00, 124.70it/s]\n",
+      "100%|██████████| 1200/1200 [00:06<00:00, 188.11it/s]\n",
+      "100%|██████████| 1200/1200 [00:08<00:00, 138.33it/s]\n",
+      "100%|██████████| 1200/1200 [00:10<00:00, 109.59it/s]\n"
      ]
     },
     {
@@ -64,23 +63,48 @@
      "text": [
       "- Add fractional variables\n",
       "- Convert time dimension and xarray\n",
-      "- Temporal interpolation\n"
+      "- Temporal interpolation\n",
+      "- Filter out scenarios with C8 and models with small entry numbers\n",
+      "- Save stuff\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "x:\\user\\dekkerm\\environments\\MyEnv\\lib\\site-packages\\xarray\\core\\missing.py:264: FutureWarning: is_monotonic is deprecated and will be removed in a future version. Use is_monotonic_increasing instead.\n",
-      "  if not index.is_monotonic:\n"
-     ]
-    },
+    }
+   ],
+   "source": [
+    "from class_datahandling import data_handling\n",
+    "\n",
+    "datahandler = data_handling()\n",
+    "datahandler.read_variable_list()\n",
+    "datahandler.read_metadata()\n",
+    "datahandler.read_ar6()\n",
+    "datahandler.filters_and_preprocessing()\n",
+    "datahandler.merge_model_versions_and_scenarios()\n",
+    "datahandler.generate_aggregated_variables()\n",
+    "datahandler.add_fractional_variables()\n",
+    "datahandler.conversion_to_xarray()\n",
+    "datahandler.temporal_interpolation()\n",
+    "datahandler.filters()\n",
+    "datahandler.savings()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run decomposition code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Count models and c-outcomes\n",
-      "- Filter out scenarios with C8 and models with small entry numbers\n",
+      "# ==================================== #\n",
+      "# Initializing decomposition class     #\n",
+      "# ==================================== #\n",
       "- Generate samples and apply decomposition\n"
      ]
     },
@@ -88,7 +112,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 138/138 [13:47:24<00:00, 359.74s/it]  \n"
+      "100%|██████████| 138/138 [00:14<00:00,  9.56it/s]"
      ]
     },
     {
@@ -97,35 +121,28 @@
      "text": [
       "- Save stuff\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
-    "import ClassVarianceDecomp_v2\n",
-    "reload(ClassVarianceDecomp_v2)\n",
-    "from ClassVarianceDecomp_v2 import variancedecomp\n",
+    "from class_decomposition import decomposition\n",
     "\n",
-    "decomp = variancedecomp()\n",
-    "decomp.read_variable_list()\n",
-    "decomp.read_metadata()\n",
-    "decomp.read_ar6()\n",
-    "decomp.count_variables()\n",
-    "decomp.filters_and_preprocessing()\n",
-    "decomp.merge_model_versions_and_scenarios()\n",
-    "decomp.generate_aggregated_variables()\n",
-    "decomp.add_fractional_variables()\n",
-    "decomp.conversion_to_xarray()\n",
-    "decomp.temporal_interpolation()\n",
-    "decomp.count_models_and_climate_outcomes()\n",
-    "decomp.filters()\n",
-    "#decomp.sampling_and_decomposing()\n",
-    "#decomp.savings()"
+    "decomposer = decomposition()\n",
+    "decomposer.sampling_and_decomposing()\n",
+    "decomposer.savings()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sensitivity analysis"
+    "## Run sensitivity analysis code (optional)"
    ]
   },
   {
@@ -142,36 +159,22 @@
     }
    ],
    "source": [
-    "# SENSITIVITY ANALYSIS\n",
-    "# Redefine parameters\n",
-    "decomp.var_all = ['Secondary Energy|Electricity|Solar']\n",
+    "# Set parameter (-lists) according to how you want to do the sensitivity analysis\n",
+    "decomposer.var_all = ['Secondary Energy|Electricity|Solar']\n",
     "resampling = 100\n",
-    "decomp.resampling = 1\n",
-    "list_samplesize = [3, 10, 30, 100, 300, 1000, 3000]#np.arange(5, 100, 5)\n",
+    "decomposer.resampling = 1\n",
+    "list_samplesize = [3, 10, 30, 100, 300, 1000, 3000]\n",
     "mat = np.zeros(shape=(len(list_samplesize), resampling))\n",
     "\n",
     "for s_i, s in tqdm(enumerate(list_samplesize)):\n",
-    "    decomp.sample_size_per_ms = s\n",
+    "    decomposer.sample_size_per_ms = s\n",
     "    for r_i in range(resampling):\n",
-    "        decomp.sampling_and_decomposing(printy='off')\n",
-    "        mat[s_i, r_i] = float(decomp.XRvar.sel(Variable='Secondary Energy|Electricity|Solar', Time=2050).S_m+0.5*decomp.XRvar.sel(Variable='Secondary Energy|Electricity|Solar', Time=2050).S_mc)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Save files if preferred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# np.save(\"/Data/Sensitivity/Mat.npy\", mat)\n",
-    "# np.save(\"/Data/Sensitivity/L_samplesize.npy\", list_samplesize)"
+    "        decomposer.sampling_and_decomposing(printy='off')\n",
+    "        mat[s_i, r_i] = float(decomposer.XRvar.sel(Variable='Secondary Energy|Electricity|Solar', Time=2050).S_m+0.5*decomposer.XRvar.sel(Variable='Secondary Energy|Electricity|Solar', Time=2050).S_mc)\n",
+    "\n",
+    "# If preferred, save sensitivity output files:\n",
+    "np.save(\"/Data/Sensitivity/Mat.npy\", mat)\n",
+    "np.save(\"/Data/Sensitivity/L_samplesize.npy\", list_samplesize)"
    ]
   }
  ],
