--- a/Plotting_scripts/Figure_1.ipynb
+++ b/Plotting_scripts/Figure_1.ipynb
@@ -9,27 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import xarray as xr\n",
-    "from importlib import reload\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "from plotly.colors import n_colors\n",
-    "from matplotlib import colors as clrs\n",
     "from plotly.subplots import make_subplots\n",
     "import os\n",
-    "import plotly.figure_factory as ff\n",
     "import matplotlib as mpl\n",
-    "import plotly.io\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
     "from datetime import date\n",
     "import plotly.graph_objects as go\n",
-    "from Plotfunctions import triangleplot, tableplot, spaghettiplot, draw_line"
+    "from Plotfunctions import draw_line"
    ]
   },
   {
@@ -41,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,18 +391,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Plotfunctions\n",
-    "reload(Plotfunctions)\n",
-    "from Plotfunctions import rescale_size, triangleplot, tableplot, spaghettiplot, draw_line, boxplots, drawline_brack, drawline_single"
+    "from Plotfunctions import rescale_size, draw_line, boxplots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -965,25 +959,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "if save == 1:\n",
     "    try:\n",
-    "        os.remove('../Figures/Paperfigures/Figure_1'+sub+'.html')\n",
+    "        os.remove('../Figures/Paperfigures/Figure_1.html')\n",
     "    except:\n",
     "        3\n",
     "    def html_w(typ):\n",
     "        return '<html> '+typ+' <p style=\"font-family: Arial\">'\n",
     "\n",
-    "    fig.write_image(\"../Figures/Paperfigures/Figure_1\"+sub+\".pdf\")\n",
-    "    fig.write_image(\"../Figures/Paperfigures/Figure_1\"+sub+\".png\", scale=3)\n",
-    "    fig.write_image(\"../Figures/Paperfigures/Figure_1\"+sub+\".svg\")\n",
+    "    fig.write_image(\"../Figures/Paperfigures/Figure_1.pdf\")\n",
+    "    fig.write_image(\"../Figures/Paperfigures/Figure_1.png\", scale=3)\n",
+    "    fig.write_image(\"../Figures/Paperfigures/Figure_1.svg\")\n",
     "    today = date.today()\n",
     "    td = today.strftime(\"%B %d, %Y\")\n",
     "\n",
-    "    with open('../Figures/Paperfigures/Figure_1'+sub+'.html', 'a') as f:\n",
+    "    with open('../Figures/Paperfigures/Figure_1.html', 'a') as f:\n",
     "        f.write(html_w('<h1>')+'Figure 1 - Electricity Generation</p></h1>')\n",
     "        f.write(html_w('<body>')+'Version: '+td+'</p></body>')\n",
     "        f.write(fig.to_html(full_html=False, include_plotlyjs='cdn'))"
