--- a/Plotting_scripts/Figure_2.ipynb
+++ b/Plotting_scripts/Figure_2.ipynb
@@ -15,21 +15,17 @@
    "source": [
     "import numpy as np\n",
     "import xarray as xr\n",
-    "from importlib import reload\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "from plotly.colors import n_colors\n",
-    "from matplotlib import colors as clrs\n",
     "from plotly.subplots import make_subplots\n",
     "import os\n",
-    "import plotly.figure_factory as ff\n",
     "import matplotlib as mpl\n",
-    "import plotly.io\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
     "from datetime import date\n",
     "import plotly.graph_objects as go\n",
-    "from Plotfunctions import triangleplot, tableplot, spaghettiplot, draw_line"
+    "from Plotfunctions import draw_line"
    ]
   },
   {
@@ -350,9 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Plotfunctions\n",
-    "reload(Plotfunctions)\n",
-    "from Plotfunctions import rescale_size, triangleplot, tableplot, spaghettiplot, draw_line, boxplots, drawline_brack, drawline_single"
+    "from Plotfunctions import rescale_size, draw_line, boxplots"
    ]
   },
   {
